fix? dir upload, file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
-PORT=
+PORT=8080
 
-SALT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_HOST=127.0.0.1
+DB_DIARECT=postgres
+DB_PORT=5432
+DB_TIME_ZONE=Asia/Bangkok
 
 JWT_SECRET=
-JWT_EXP=
+JWT_EXP=1m
+SALT=10
