--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ DB_DIARECT=postgres
 DB_PORT=5432
 DB_TIME_ZONE=Asia/Bangkok
 
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
+
 JWT_SECRET=
 JWT_EXP=1m
 SALT=10
